feat: restructure project with organized folder structure
- Reorganize source code into logical folders (Controllers, Services, Data, etc.)
- Move all business logic to src/ directory
- Create separate folders for tests, scripts, and documentation
- Add placeholder README files for empty folders to indicate future use

--- a/appsettings.Production.json
+++ b/appsettings.Production.json
@@ -1,12 +1,22 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Warning",
       "Microsoft.AspNetCore": "Warning"
     }
   },
   "AllowedHosts": "*",
   "Mail": {
-    "Mode": "console"
+    "Mode": "smtp",
+    "Smtp": {
+      "Host": "${SMTP_HOST}",
+      "Port": "${SMTP_PORT}",
+      "User": "${SMTP_USER}",
+      "Pass": "${SMTP_PASS}",
+      "From": "${SMTP_FROM}"
+    }
+  },
+  "Calendly": {
+    "DefaultUrl": "${CALENDLY_USER_URL}"
   }
 }
