--- a/appsettings.json
+++ b/appsettings.json
@@ -1,12 +1,42 @@
 {
-  "Mail": {
-    "Mode": "console",          // "console" or "smtp"
-    "Smtp": {
-      "Host": "smtp.example.com",
-      "Port": 587,
-      "User": "${SMTP_USER}",   // environment variable or GitHub secret
-      "Pass": "${SMTP_PASS}",
-      "From": "barber@kral.com"
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "Application": {
+    "Name": "BarberDemo",
+    "Version": "1.0.0",
+    "Description": "Modern Barber Appointment System"
+  },
+  "Business": {
+    "Name": "Barber Shop",
+    "Phone": "+90 555 123 4567",
+    "Email": "info@barbershop.com",
+    "Address": "İstanbul, Türkiye",
+    "WorkingHours": {
+      "Monday": "09:00-18:00",
+      "Tuesday": "09:00-18:00",
+      "Wednesday": "09:00-18:00",
+      "Thursday": "09:00-18:00",
+      "Friday": "09:00-18:00",
+      "Saturday": "09:00-17:00",
+      "Sunday": "Closed"
+    }
+  },
+  "Mail": {
+    "Mode": "console",
+    "Smtp": {
+      "Host": "",
+      "Port": 587,
+      "User": "",
+      "Pass": "",
+      "From": ""
+    }
+  },
+  "Calendly": {
+    "DefaultUrl": "https://calendly.com/yourusername/30min"
   }
 }
