--- a/.gitignore
+++ b/.gitignore
@@ -72,6 +72,25 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+# Environment Variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Secrets
+secrets.json
+appsettings.Development.json
+appsettings.Local.json
+
+# Docker
+.dockerignore
+
+# Logs
+*.log
+logs/
+
 # OS generated files
 .DS_Store
 .DS_Store?
@@ -80,3 +99,14 @@ yarn-error.log*
 .Trashes
 ehthumbs.db
 Thumbs.db
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# Temporary files
+*.tmp
+*.temp
+*~
